--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,11 @@ body, .app {
   font-size: 0;
   border: none;
   outline: none;
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
 }
 
 button:active {
