--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@ body {
 }
 
 body, .app {
-  background: white;
+  background: #252525;
 }
 
 /* main page */
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #111111;
   text-align: center;
 }
 
@@ -40,7 +40,8 @@ body, .app {
 }
 
 .bookshelf-title {
-  border-bottom: 1px solid #dedede;
+  color: white;
+  border-bottom: 1px solid grey;
 }
 
 .bookshelf-books {
@@ -58,7 +59,8 @@ body, .app {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background: #2e7d32;
+  border-color: transparent;
+  background: #4d196f;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -69,7 +71,7 @@ body, .app {
 }
 
 .open-search button:hover {
-  background-color: rgb(0, 102, 0);
+  background-color: #4d194d;
 }
 
 
@@ -94,6 +96,8 @@ body, .app {
   width: 100%;
   padding: 15px 10px;
   font-size: 1.25em;
+  color: white;
+  background: #111111;
   border: none;
   outline: none;
 }
@@ -136,6 +140,7 @@ button:active {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  color: white;
 }
 
 .books-grid li {
@@ -174,7 +179,7 @@ button:active {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: #4d196f;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -182,11 +187,21 @@ button:active {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.book-shelf-changer:hover{
+  background-color: #4d194d;
+}
+
 .book-shelf-changer select {
   width: 100%;
   height: 100%;
   opacity: 0;
   cursor: pointer;
+  background-color: #252525;
+}
+
+.book-shelf-changer select option {
+  font-size: 1rem;
+  color: white;
 }
 
 /* book cover */
